--- a/Notes/TSC1 Notes/main.tex
+++ b/Notes/TSC1 Notes/main.tex
@@ -153,15 +153,15 @@ Consider two short time seires $\mathbf{x}=\{x_t\} = \{0,1,2,1,0\}$ and $\mathbf
 \end{center}
 The individual joint probabilities can be found using the frequencies of occurence as
 \begin{eqnarray}
-P(y_t=0 \cap x_t = 0) &=& \frac{4}{25}\\
-P(y_t=1 \cap x_t = 0) &=& \frac{4}{25}\\
-P(y_t=2 \cap x_t = 0) &=& \frac{2}{25}\\
-P(y_t=0 \cap x_t = 1) &=& \frac{4}{25}\\
-P(y_t=1 \cap x_t = 1) &=& \frac{4}{25}\\
-P(y_t=2 \cap x_t = 1) &=& \frac{2}{25}\\
-P(y_t=0 \cap x_t = 2) &=& \frac{2}{25}\\
-P(y_t=1 \cap x_t = 2) &=& \frac{2}{25}\\
-P(y_t=2 \cap x_t = 2) &=& \frac{1}{25}
+P(y_t=0 \cap x_t = 0) &=& \frac{1}{5}\\
+P(y_t=1 \cap x_t = 0) &=& \frac{1}{5}\\
+P(y_t=2 \cap x_t = 0) &=& 0\\
+P(y_t=0 \cap x_t = 1) &=& \frac{1}{5}\\
+P(y_t=1 \cap x_t = 1) &=& 0\\
+P(y_t=2 \cap x_t = 1) &=& \frac{1}{5}\\
+P(y_t=0 \cap x_t = 2) &=& 0\\
+P(y_t=1 \cap x_t = 2) &=& \frac{1}{5}\\
+P(y_t=2 \cap x_t = 2) &=& 0
 \end{eqnarray}
 The individual probabilities are found similarly:
 \begin{eqnarray}
@@ -175,47 +175,47 @@ P(y_t = 2) &=& \frac{1}{5}
 The joint probabilities are symmetric (i.e.\ $P(x_t\cap y_t) = P(y_t\cap x_t)$).  Thus, the two above sets of probabilities are sufficient to find all the conditionals.  
 \begin{center}
 \begin{tabular}{c|c|c}
-$P(y_t=0 | x_t = 0) = \frac{P(y_t=0 \cap x_t = 0)}{P(x_t = 0)} = \frac{2}{5}$ &
-$P(y_t=0 | x_t = 1) = \frac{P(y_t=0 \cap x_t = 1)}{P(x_t = 1)} = \frac{2}{5}$ &
-$P(y_t=0 | x_t = 2) = \frac{P(y_t=0 \cap x_t = 2)}{P(x_t = 2)} = \frac{2}{5}$ \\
+$P(y_t=0 | x_t = 0) = \frac{P(y_t=0 \cap x_t = 0)}{P(x_t = 0)} = \frac{1}{2}$ &
+$P(y_t=0 | x_t = 1) = \frac{P(y_t=0 \cap x_t = 1)}{P(x_t = 1)} = \frac{1}{2}$ &
+$P(y_t=0 | x_t = 2) = \frac{P(y_t=0 \cap x_t = 2)}{P(x_t = 2)} = 0$ \\
 
-$P(y_t=1 | x_t = 0) = \frac{P(y_t=1 \cap x_t = 0)}{P(x_t = 0)} = \frac{2}{5}$ &
-$P(y_t=1 | x_t = 1) = \frac{P(y_t=1 \cap x_t = 1)}{P(x_t = 1)} = \frac{2}{5}$ &
-$P(y_t=1 | x_t = 2) = \frac{P(y_t=1 \cap x_t = 2)}{P(x_t = 2)} = \frac{2}{5}$ \\
+$P(y_t=1 | x_t = 0) = \frac{P(y_t=1 \cap x_t = 0)}{P(x_t = 0)} = \frac{1}{2}$ &
+$P(y_t=1 | x_t = 1) = \frac{P(y_t=1 \cap x_t = 1)}{P(x_t = 1)} = 0$ &
+$P(y_t=1 | x_t = 2) = \frac{P(y_t=1 \cap x_t = 2)}{P(x_t = 2)} = 1$ \\
 
-$P(y_t=2 | x_t = 0) = \frac{P(y_t=2 \cap x_t = 0)}{P(x_t = 0)} = \frac{1}{5}$ &
-$P(y_t=2 | x_t = 1) = \frac{P(y_t=2 \cap x_t = 1)}{P(x_t = 1)} = \frac{1}{5}$ &
-$P(y_t=2 | x_t = 2) = \frac{P(y_t=2 \cap x_t = 2)}{P(x_t = 2)} = \frac{1}{5}$ \\
+$P(y_t=2 | x_t = 0) = \frac{P(y_t=2 \cap x_t = 0)}{P(x_t = 0)} = 0$ &
+$P(y_t=2 | x_t = 1) = \frac{P(y_t=2 \cap x_t = 1)}{P(x_t = 1)} = \frac{1}{2}$ &
+$P(y_t=2 | x_t = 2) = \frac{P(y_t=2 \cap x_t = 2)}{P(x_t = 2)} = 0$ \\
 \hline \\
-$P(x_t=0 | y_t = 0) = \frac{P(y_t=0 \cap x_t = 0)}{P(y_t = 0)} = \frac{2}{5}$ &
-$P(x_t=0 | y_t = 1) = \frac{P(y_t=0 \cap x_t = 1)}{P(y_t = 1)} = \frac{2}{5}$ &
-$P(x_t=0 | y_t = 2) = \frac{P(y_t=0 \cap x_t = 2)}{P(y_t = 2)} = \frac{2}{5}$ \\
+$P(x_t=0 | y_t = 0) = \frac{P(y_t=0 \cap x_t = 0)}{P(y_t = 0)} = \frac{1}{2}$ &
+$P(x_t=0 | y_t = 1) = \frac{P(y_t=1 \cap x_t = 0)}{P(y_t = 1)} = \frac{1}{2}$ &
+$P(x_t=0 | y_t = 2) = \frac{P(y_t=2 \cap x_t = 0)}{P(y_t = 2)} = 0$ \\
 
-$P(x_t=1 | y_t = 0) = \frac{P(y_t=1 \cap x_t = 0)}{P(y_t = 0)} = \frac{2}{5}$ &
-$P(x_t=1 | y_t = 1) = \frac{P(y_t=1 \cap x_t = 1)}{P(y_t = 1)} = \frac{2}{5}$ &
-$P(x_t=1 | y_t = 2) = \frac{P(y_t=1 \cap x_t = 2)}{P(y_t = 2)} = \frac{2}{5}$ \\
+$P(x_t=1 | y_t = 0) = \frac{P(y_t=0 \cap x_t = 1)}{P(y_t = 0)} = \frac{1}{2}$ &
+$P(x_t=1 | y_t = 1) = \frac{P(y_t=1 \cap x_t = 1)}{P(y_t = 1)} = 0$ &
+$P(x_t=1 | y_t = 2) = \frac{P(y_t=2 \cap x_t = 1)}{P(y_t = 2)} = 1$ \\
 
-$P(x_t=2 | y_t = 0) = \frac{P(y_t=2 \cap x_t = 0)}{P(y_t = 0)} = \frac{1}{5}$ &
-$P(x_t=2 | y_t = 1) = \frac{P(y_t=2 \cap x_t = 1)}{P(y_t = 1)} = \frac{1}{5}$ &
-$P(x_t=2 | y_t = 2) = \frac{P(y_t=2 \cap x_t = 2)}{P(y_t = 2)} = \frac{1}{5}$ \\
+$P(x_t=2 | y_t = 0) = \frac{P(y_t=0 \cap x_t = 2)}{P(y_t = 0)} = 0$ &
+$P(x_t=2 | y_t = 1) = \frac{P(y_t=1 \cap x_t = 2)}{P(y_t = 1)} = \frac{1}{2}$ &
+$P(x_t=2 | y_t = 2) = \frac{P(y_t=2 \cap x_t = 2)}{P(y_t = 2)} = 0$ \\
 \end{tabular}
 \end{center}
 Consider the penchant
 $$
-\rho_{xy} = P(x_t = 0 | y_t = 0) - P(x_t = 0 | y_t \neq 0) = \frac{2}{5} - \frac{4}{5} = -\frac{2}{5}
+\rho_{xy} = P(x_t = 0 | y_t = 0) - P(x_t = 0 | y_t \neq 0) = \frac{1}{2} - \frac{1}{2} = 0
 $$
 and its partner
 $$
-\rho_{yx} = P(y_t = 0 | x_t = 0) - P(y_t = 0 | x_t \neq 0) = \frac{2}{5} - \frac{4}{5} = -\frac{2}{5}\;\;.
+\rho_{yx} = P(y_t = 0 | x_t = 0) - P(y_t = 0 | x_t \neq 0) = \frac{1}{2} - \frac{1}{2} = 0\;\;.
 $$
 These two values are equal, but they are also only for a single points.  Consider comparing the two time series using mean penchants,
 \begin{eqnarray}
 \langle \rho_{xy} \rangle &=& \frac{1}{9}\left[ \sum_{i=0}^2 \sum_{j=0}^2 \left(P(x_t = i | y_t = j) - P(x_t = i | y_t \neq j)\right)\right] \\
-&=& \frac{1}{9}\left[ -\frac{2}{5} - \frac{2}{5} - \frac{2}{5} -\frac{2}{5}-\frac{2}{5}-\frac{2}{5}-\frac{1}{5}-\frac{1}{5}-\frac{1}{5}\right] \\
-&=& - \frac{12}{45}
+&=& \frac{1}{9}\left[ 0 + 0 -1 -\frac{1}{2} -\frac{3}{2} +\frac{1}{2} -\frac{1}{2} +\frac{1}{2} -\frac{1}{2}\right] \\
+&=& \frac{1}{3}
 \end{eqnarray}
 and $\langle \rho_{yx} \rangle = \langle \rho_{xy} \rangle$.  This last statement is seen from the table above.  Thus, even the mean penchants are equal and there seems to be no useful conclusions from the penchants regarding causal influence.
 
-The next step is to investagte the difference series: $\mathbf{\delta x} = \delta x_t = x_t - x_{t-1} = \{0,1,1,-1,-1\}$ and $\mathbf{\delta y} =\delta y_t = y_t - y_{t-1} = \{0,0,1,1,-1\}$.  There are now four time series, $\mathbf{x}$, $\mathbf{y}$, $\mathbf{\delta x}$, and $\mathbf{\delta y}$, with xx permutations to investigate, $(\mathbf{x},\mathbf{y})$, $(\mathbf{x},\mathbf{\delta y})$, $(\mathbf{\delta x},\mathbf{y})$, $(\mathbf{\delta x},\mathbf{\delta y})$, $(\mathbf{x},\mathbf{\delta x})$, and $(\mathbf{y},\mathbf{\delta y})$.  It has already been determined that no conclusions can be drawn about $(\mathbf{x},\mathbf{y})$.  
+The next step is to investigate the difference series: $\mathbf{\delta x} = \delta x_t = x_t - x_{t-1} = \{0,1,1,-1,-1\}$ and $\mathbf{\delta y} =\delta y_t = y_t - y_{t-1} = \{0,0,1,1,-1\}$.  There are now four time series, $\mathbf{x}$, $\mathbf{y}$, $\mathbf{\delta x}$, and $\mathbf{\delta y}$, with xx permutations to investigate, $(\mathbf{x},\mathbf{y})$, $(\mathbf{x},\mathbf{\delta y})$, $(\mathbf{\delta x},\mathbf{y})$, $(\mathbf{\delta x},\mathbf{\delta y})$, $(\mathbf{x},\mathbf{\delta x})$, and $(\mathbf{y},\mathbf{\delta y})$.  It has already been determined that no conclusions can be drawn about $(\mathbf{x},\mathbf{y})$.  
 
 \end{document}
