--- a/Notes/TSC1 Notes/main.tex
+++ b/Notes/TSC1 Notes/main.tex
@@ -216,6 +216,239 @@ These two values are equal, but they are also only for a single points.  Conside
 \end{eqnarray}
 and $\langle \rho_{yx} \rangle = \langle \rho_{xy} \rangle$.  This last statement is seen from the table above.  Thus, even the mean penchants are equal and there seems to be no useful conclusions from the penchants regarding causal influence.
 
-The next step is to investigate the difference series: $\mathbf{\delta x} = \delta x_t = x_t - x_{t-1} = \{0,1,1,-1,-1\}$ and $\mathbf{\delta y} =\delta y_t = y_t - y_{t-1} = \{0,0,1,1,-1\}$.  There are now four time series, $\mathbf{x}$, $\mathbf{y}$, $\mathbf{\delta x}$, and $\mathbf{\delta y}$, with xx permutations to investigate, $(\mathbf{x},\mathbf{y})$, $(\mathbf{x},\mathbf{\delta y})$, $(\mathbf{\delta x},\mathbf{y})$, $(\mathbf{\delta x},\mathbf{\delta y})$, $(\mathbf{x},\mathbf{\delta x})$, and $(\mathbf{y},\mathbf{\delta y})$.  It has already been determined that no conclusions can be drawn about $(\mathbf{x},\mathbf{y})$.  
+The next step is to investigate the difference series: $\mathbf{\delta x} = \delta x_t = x_t - x_{t-1} = \{0,1,1,-1,-1\}$ and $\mathbf{\delta y} =\delta y_t = y_t - y_{t-1} = \{0,0,1,1,-1\}$.  There are now four time series, $\mathbf{x}$, $\mathbf{y}$, $\mathbf{\delta x}$, and $\mathbf{\delta y}$, with six permutations to investigate, $(\mathbf{x},\mathbf{y})$, $(\mathbf{x},\mathbf{\delta y})$, $(\mathbf{\delta x},\mathbf{y})$, $(\mathbf{\delta x},\mathbf{\delta y})$, $(\mathbf{x},\mathbf{\delta x})$, and $(\mathbf{y},\mathbf{\delta y})$.  It has already been determined that no conclusions can be drawn about $(\mathbf{x},\mathbf{y})$.  The following table is for reference in the counting exercises below:
+\begin{center}
+\begin{tabular}{c|c|c|c|c}
+t & $\mathbf{x}$ & $\mathbf{y}$ & $\mathbf{\delta x}$ & $\mathbf{\delta y}$ \\
+\hline 
+0 & 0 & 0 & 0 & 0\\
+1 & 1 & 0 & 1 & 0\\
+2 & 2 & 1 & 1 & 1\\
+3 & 1 & 2 & -1 & 1\\
+4 & 0 & 1 & -1 & -1
+\end{tabular}
+\end{center}
+
+Consider the three permutations: $(\mathbf{x},\mathbf{\delta x})$, $(\mathbf{\delta x},\mathbf{y})$, and $(\mathbf{\delta x},\mathbf{\delta y})$.  The joint probabilities are as follows:
+\begin{center}
+\begin{tabular}{c|c|c}
+$P(x_t=0 \cap \delta x_t = 0) = \frac{1}{5}$&$P(y_t=0 \cap \delta x_t = 0) = \frac{1}{5}$&$P(\delta y_t=0 \cap \delta x_t = 0) = \frac{1}{5}$\\
+$P(x_t=1 \cap \delta x_t = 0) = 0$&$P(y_t=1 \cap \delta x_t = 0) = 0$&$P(\delta y_t=1 \cap \delta x_t = 0) = 0$\\
+$P(x_t=2 \cap \delta x_t = 0) = 0$&$P(y_t=2 \cap \delta x_t = 0) = 0$&$P(\delta y_t=-1 \cap \delta x_t = 0) = 0$\\
+$P(x_t=0 \cap \delta x_t = 1) = 0$&$P(y_t=0 \cap \delta x_t = 1) = \frac{1}{5}$&$P(\delta y_t=0 \cap \delta x_t = 1) = \frac{1}{5}$\\
+$P(x_t=1 \cap \delta x_t = 1) = \frac{1}{5}$&$P(y_t=1 \cap \delta x_t = 1) = \frac{1}{5}$&$P(\delta y_t=1 \cap \delta x_t = 1) = \frac{1}{5}$\\
+$P(x_t=2 \cap \delta x_t = 1) = \frac{1}{5}$&$P(y_t=2 \cap \delta x_t = 1) = 0$&$P(\delta y_t=-1 \cap \delta x_t = 1) =0 $\\
+$P(x_t=0 \cap \delta x_t = -1) = \frac{1}{5}$&$P(y_t=0 \cap \delta x_t = -1) = 0$&$P(\delta y_t=0 \cap \delta x_t = -1) = 0$\\
+$P(x_t=1 \cap \delta x_t = -1) = \frac{1}{5}$&$P(y_t=1 \cap \delta x_t = -1) = \frac{1}{5}$&$P(\delta y_t=1 \cap \delta x_t = -1) = \frac{1}{5}$\\
+$P(x_t=2 \cap \delta x_t = -1) = 0$&$P(y_t=2 \cap \delta x_t = -1) = \frac{1}{5}$&$P(\delta y_t=-1 \cap \delta x_t = -1) = \frac{1}{5}$\\
+\end{tabular}
+\end{center}
+The last two permutations, $(\mathbf{x},\mathbf{\delta y})$ and $(\mathbf{y},\mathbf{\delta y})$, lead to the following table:
+\begin{center}
+\begin{tabular}{c|c}
+$P(x_t=0 \cap \delta y_t = 0) = \frac{1}{5}$&$P(y_t=0 \cap \delta y_t = 0) = \frac{2}{5}$\\
+$P(x_t=1 \cap \delta y_t = 0) = \frac{1}{5}$&$P(y_t=1 \cap \delta y_t = 0) = 0$\\
+$P(x_t=2 \cap \delta y_t = 0) = 0$&$P(y_t=2 \cap \delta y_t = 0) = 0$\\
+$P(x_t=0 \cap \delta y_t = 1) = 0$&$P(y_t=0 \cap \delta y_t = 1) = 0$\\
+$P(x_t=1 \cap \delta y_t = 1) = \frac{1}{5}$&$P(y_t=1 \cap \delta y_t = 1) = \frac{1}{5}$\\
+$P(x_t=2 \cap \delta y_t = 1) = \frac{1}{5}$&$P(y_t=2 \cap \delta y_t = 1) = \frac{1}{5}$\\
+$P(x_t=0 \cap \delta y_t = -1) = \frac{1}{5}$&$P(y_t=0 \cap \delta y_t = -1) = 0$\\
+$P(x_t=1 \cap \delta y_t = -1) = 0$&$P(y_t=1 \cap \delta y_t = -1) = \frac{1}{5}$\\
+$P(x_t=2 \cap \delta y_t = -1) = 0$&$P(y_t=2 \cap \delta y_t = -1) =0$\\
+\end{tabular}
+\end{center}
+The individual probabilities are (the ones printed above have been reprinted for convenience)
+\begin{center}
+\begin{tabular}{c|c}
+$P(x_t = 0) = \frac{2}{5}$&$P(\delta x_t = 0) = \frac{1}{5}$\\
+$P(x_t = 1) = \frac{2}{5}$&$P(\delta x_t = 1) = \frac{2}{5}$\\
+$P(x_t = 2) = \frac{1}{5}$&$P(\delta x_t = -1) = \frac{2}{5}$\\
+\hline
+$P(y_t = 0) = \frac{2}{5}$&$P(\delta y_t = 0) = \frac{2}{5}$\\
+$P(y_t = 1) = \frac{2}{5}$&$P(\delta y_t = 1) = \frac{2}{5}$\\
+$P(y_t = 2) = \frac{1}{5}$&$P(\delta y_t = -1) = \frac{1}{5}$
+\end{tabular}
+\end{center}
+
+Consider the penchants for $(\mathbf{x},\mathbf{\delta x})$.  The conditional probability table is
+\begin{center}
+\begin{tabular}{c|c|c}
+$P(x_t=0 | \delta x_t = 0) = 1$ &
+$P(x_t=0 | \delta x_t = 1) = 0$ &
+$P(x_t=0 | \delta x_t = -1) = \frac{1}{2}$ \\
+
+$P(x_t=1 | \delta x_t = 0) = 0$ &
+$P(x_t=1 | \delta x_t = 1) = \frac{1}{2}$ &
+$P(x_t=1 | \delta x_t = -1) = \frac{1}{2}$ \\
+
+$P(x_t=2 | \delta x_t = 0) = 0$ &
+$P(x_t=2 | \delta x_t = 1) = \frac{1}{2}$ &
+$P(x_t=2 | \delta x_t = -1) = 0$ \\
+\hline \\
+$P(\delta x_t=0 | x_t = 0) = \frac{1}{2}$ &
+$P(\delta x_t=0 | x_t = 1) = 0$ &
+$P(\delta x_t=0 | x_t = 2) = 0$ \\
+
+$P(\delta x_t=1 | x_t = 0) = 0$ &
+$P(\delta x_t=1 | x_t = 1) = \frac{1}{2}$ &
+$P(\delta x_t=1 | x_t = 2) = 1$ \\
+
+$P(\delta x_t=-1 | x_t = 0) = \frac{1}{2}$ &
+$P(\delta x_t=-1 | x_t = 1) = \frac{1}{2}$ &
+$P(\delta x_t=-1 | x_t = 2) = 0$ \\
+\end{tabular}
+\end{center}
+Thus,
+\begin{eqnarray}
+\langle \rho_{x\delta x} \rangle &=& \frac{1}{9}\left[\left(1-\frac{1}{2}\right)+\left(0-1\right)+\left(0-\frac{1}{2}\right)\right.\\
+& &+\left(0-\frac{3}{2}\right)+\left(\frac{1}{2}-\frac{1}{2}\right)+\left(\frac{1}{2}-0\right)\\
+& &\left.+\left(\frac{1}{2}-1\right)+\left(\frac{1}{2}-\frac{1}{2}\right)+\left(0-\frac{1}{2}\right)\right] \\
+&=& \frac{1}{9}\left[\frac{1}{2}-1-\frac{1}{2}-\frac{3}{2}+\frac{1}{2}-\frac{1}{2}-\frac{1}{2}\right] \\
+&=& -\frac{1}{3}
+\end{eqnarray}
+and
+\begin{eqnarray}
+\langle \rho_{\delta x x} \rangle &=& \frac{1}{9}\left[\left(\frac{1}{2}-0\right)+\left(0-\frac{3}{2}\right)+\left(\frac{1}{2}-\frac{1}{2}\right)\right.\\
+& &+\left(0-\frac{1}{2}\right)+\left(\frac{1}{2}-1\right)+\left(\frac{1}{2}-\frac{1}{2}\right)\\
+& &\left.+\left(0-\frac{1}{2}\right)+\left(1-\frac{1}{2}\right)+\left(0-1\right)\right] \\
+&=& \frac{1}{9}\left[\frac{1}{2}-\frac{3}{2}-\frac{1}{2}-\frac{1}{2}-\frac{1}{2}+\frac{1}{2}-1\right] \\
+&=& -\frac{1}{3}\;\; .
+\end{eqnarray}
+
+Consider the penchants for $(\mathbf{\delta x},\mathbf{y})$.  The conditional probability table is
+\begin{center}
+\begin{tabular}{c|c|c}
+$P(\delta x_t=0 | y_t = 0) = \frac{1}{2}$ &
+$P(\delta x_t=0 | y_t = 1) = 0$ &
+$P(\delta x_t=0 | y_t = 2) = 0$ \\
+
+$P(\delta x_t=1 | y_t = 0) = \frac{1}{2}$ &
+$P(\delta x_t=1 | y_t = 1) = \frac{1}{2}$ &
+$P(\delta x_t=1 | y_t = 2) = 0$ \\
+
+$P(\delta x_t=-1 | y_t = 0) = 0$ &
+$P(\delta x_t=-1 | y_t = 1) = \frac{1}{2}$ &
+$P(\delta x_t=-1 | y_t = 2) = 1$ \\
+\hline \\
+$P(y_t=0 | \delta x_t = 0) = 1$ &
+$P(y_t=0 | \delta x_t = 1) = \frac{1}{2}$ &
+$P(y_t=0 | \delta x_t = -1) = 0$ \\
+
+$P(y_t=1 | \delta x_t = 0) = 0$ &
+$P(y_t=1 | \delta x_t = 1) = \frac{1}{2}$ &
+$P(y_t=1 | \delta x_t = -1) = \frac{1}{2}$ \\
+
+$P(y_t=2 | \delta x_t = 0) = 0$ &
+$P(y_t=2 | \delta x_t = 1) = 0$ &
+$P(y_t=2 | \delta x_t = -1) = \frac{1}{2}$ \\
+\end{tabular}
+\end{center}
+Thus,
+\begin{eqnarray}
+\langle \rho_{\delta x y} \rangle &=& \frac{1}{9}\left[\left(\frac{1}{2}-0\right)+\left(\frac{1}{2}-\frac{1}{2}\right)+\left(0-\frac{3}{2}\right)\right.\\
+& &+\left(0-\frac{1}{2}\right)+\left(\frac{1}{2}-\frac{1}{2}\right)+\left(\frac{1}{2}-1\right)\\
+& &\left.+\left(0-\frac{1}{2}\right)+\left(0-1\right)+\left(1-\frac{1}{2}\right)\right] \\
+&=& \frac{1}{9}\left[\frac{1}{2}-\frac{3}{2}-\frac{1}{2}-\frac{1}{2}-\frac{1}{2}-1+\frac{1}{2}\right] \\
+&=& -\frac{2}{9}
+\end{eqnarray}
+and
+\begin{eqnarray}
+\langle \rho_{y \delta x} \rangle &=& \frac{1}{9}\left[\left(1-\frac{1}{2}\right)+\left(0-1\right)+\left(0-\frac{1}{2}\right)\right.\\
+& &+\left(\frac{1}{2}-1\right)+\left(\frac{1}{2}-\frac{1}{2}\right)+\left(0-\frac{1}{2}\right)\\
+& &\left.+\left(0-\frac{3}{2}\right)+\left(\frac{1}{2}-\frac{1}{2}\right)+\left(\frac{1}{2}-0\right)\right] \\
+&=& \frac{1}{9}\left[-\frac{1}{2}-1-\frac{1}{2}-\frac{1}{2}-\frac{1}{2}-\frac{3}{2}+\frac{1}{2}\right] \\
+&=& -\frac{4}{9} \;\;.
+\end{eqnarray}
+
+Consider the penchants for $(\mathbf{\delta x},\mathbf{\delta y})$.  The conditional probability table is
+\begin{center}
+\begin{tabular}{c|c|c}
+$P(\delta x_t=0 | \delta y_t = 0) = \frac{1}{2}$ &
+$P(\delta x_t=0 | \delta y_t = 1) = 0$ &
+$P(\delta x_t=0 | \delta y_t = -1) = 0$ \\
+
+$P(\delta x_t=1 | \delta y_t = 0) = \frac{1}{2}$ &
+$P(\delta x_t=1 | \delta y_t = 1) = \frac{1}{2}$ &
+$P(\delta x_t=1 | \delta y_t = -1) = 0$ \\
+
+$P(\delta x_t=-1 | \delta y_t = 0) = 0$ &
+$P(\delta x_t=-1 | \delta y_t = 1) = \frac{1}{2}$ &
+$P(\delta x_t=-1 | \delta y_t = -1) = 1$ \\
+\hline \\
+$P(\delta y_t=0 | \delta x_t = 0) = 1$ &
+$P(\delta y_t=0 | \delta x_t = 1) = \frac{1}{2}$ &
+$P(\delta y_t=0 | \delta x_t = -1) = 0$ \\
+
+$P(\delta y_t=1 | \delta x_t = 0) = 0$ &
+$P(\delta y_t=1 | \delta x_t = 1) = \frac{1}{2}$ &
+$P(\delta y_t=1 | \delta x_t = -1) = \frac{1}{2}$ \\
+
+$P(\delta y_t=-1 | \delta x_t = 0) = 0$ &
+$P(\delta y_t=-1 | \delta x_t = 1) = 0$ &
+$P(\delta y_t=-1 | \delta x_t = -1) = \frac{1}{2}$ \\
+\end{tabular}
+\end{center}
+Thus,
+\begin{eqnarray}
+\langle \rho_{\delta x \delta y} \rangle &=& \frac{1}{9}\left[\left(\frac{1}{2}-0\right)+\left(\frac{1}{2}-\frac{1}{2}\right)+\left(0-\frac{3}{2}\right)\right.\\
+& &+\left(0-\frac{1}{2}\right)+\left(\frac{1}{2}-\frac{1}{2}\right)+\left(\frac{1}{2}-1\right)\\
+& &\left.+\left(0-\frac{1}{2}\right)+\left(0-1\right)+\left(1-\frac{1}{2}\right)\right] \\
+&=& \frac{1}{9}\left[\frac{1}{2}-\frac{3}{2}-\frac{1}{2}-\frac{1}{2}-\frac{1}{2}-1+\frac{1}{2}\right] \\
+&=& -\frac{1}{3}
+\end{eqnarray}
+and
+\begin{eqnarray}
+\langle \rho_{\delta y \delta x} \rangle &=& \frac{1}{9}\left[\left(1-\frac{1}{2}\right)+\left(0-1\right)+\left(0-\frac{1}{2}\right)\right.\\
+& &+\left(\frac{1}{2}-1\right)+\left(\frac{1}{2}-\frac{1}{2}\right)+\left(0-\frac{1}{2}\right)\\
+& &\left.+\left(0-\frac{3}{2}\right)+\left(\frac{1}{2}-\frac{1}{2}\right)+\left(\frac{1}{2}-0\right)\right] \\
+&=& \frac{1}{9}\left[\frac{1}{2}-1-\frac{1}{2}-\frac{1}{2}-\frac{1}{2}-\frac{3}{2}+\frac{1}{2}\right] \\
+&=& -\frac{1}{3} \;\;.
+\end{eqnarray}
+
+Consider the penchants for $(\mathbf{ x},\mathbf{\delta y})$.  The conditional probability table is
+\begin{center}
+\begin{tabular}{c|c|c}
+$P(x_t=0 | \delta y_t = 0) = \frac{1}{2}$ &
+$P(x_t=0 | \delta y_t = 1) = 0$ &
+$P(x_t=0 | \delta y_t = -1) = 1$ \\
+
+$P(x_t=1 | \delta y_t = 0) = \frac{1}{2}$ &
+$P(x_t=1 | \delta y_t = 1) = \frac{1}{2}$ &
+$P(x_t=1 | \delta y_t = -1) = 0$ \\
+
+$P(x_t=2 | \delta y_t = 0) = 0$ &
+$P(x_t=2 | \delta y_t = 1) = \frac{1}{2}$ &
+$P(x_t=2 | \delta y_t = -1) = 0$ \\
+\hline \\
+$P(\delta y_t=0 | x_t = 0) = \frac{1}{2}$ &
+$P(\delta y_t=0 | x_t = 1) = \frac{1}{2}$ &
+$P(\delta y_t=0 | x_t = 2) = 0$ \\
+
+$P(\delta y_t=1 | x_t = 0) = 0$ &
+$P(\delta y_t=1 | x_t = 1) = \frac{1}{2}$ &
+$P(\delta y_t=1 | x_t = 2) = 1$ \\
+
+$P(\delta y_t=-1 | x_t = 0) = \frac{1}{2}$ &
+$P(\delta y_t=-1 | x_t = 1) = 0$ &
+$P(\delta y_t=-1 | x_t = 2) = 0$ \\
+\end{tabular}
+\end{center}
+Thus,
+\begin{eqnarray}
+\langle \rho_{x \delta y} \rangle &=& \frac{1}{9}\left[\left(\frac{1}{2}-1\right)+\left(\frac{1}{2}-\frac{1}{2}\right)+\left(0-\frac{1}{2}\right)\right.\\
+& &+\left(0-\frac{3}{2}\right)+\left(\frac{1}{2}-\frac{1}{2}\right)+\left(\frac{1}{2}-0\right)\\
+& &\left.+\left(1-\frac{1}{2}\right)+\left(0-1\right)+\left(0-\frac{1}{2}\right)\right] \\
+&=& \frac{1}{9}\left[-\frac{1}{2}-\frac{1}{2}-\frac{3}{2}+\frac{1}{2}+\frac{1}{2}-1-\frac{1}{2}\right] \\
+&=& -\frac{1}{3}
+\end{eqnarray}
+and
+\begin{eqnarray}
+\langle \rho_{\delta y x} \rangle &=& \frac{1}{9}\left[\left(\frac{1}{2}-\frac{1}{2}\right)+\left(0-\frac{3}{2}\right)+\left(\frac{1}{2}-0\right)\right.\\
+& &+\left(\frac{1}{2}-\frac{1}{2}\right)+\left(\frac{1}{2}-1\right)+\left(0-\frac{1}{2}\right)\\
+& &\left.+\left(0-1\right)+\left(1-\frac{1}{2}\right)+\left(0-\frac{1}{2}\right)\right] \\
+&=& \frac{1}{9}\left[-\frac{3}{2}+\frac{1}{2}-\frac{1}{2}-\frac{1}{2}-1+\frac{1}{2}-\frac{1}{2}\right] \\
+&=& -\frac{1}{3} \;\;.
+\end{eqnarray}
+
 
 \end{document}
